[package]
name = "spid"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/CuriousCI/spid-rocket"
keywords = ["spid", "cie", "rocket"]
readme = "README.md"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spid"

[dependencies]
rocket = "0.5.0-rc.1"
chrono = "0.4"
xml-rs = "0.8.4"